--- a/application/src/kv/userprofile.kv
+++ b/application/src/kv/userprofile.kv
@@ -133,6 +133,13 @@
 		    source:"graphics/back.png"
 		    center_x: self.parent.center_x
 		    center_y: self.parent.center_y
+
+	Label:
+		text: "Share Settings"
+		font_size: 67
+		size_hint: (0.58, 0.05)
+		pos_hint:{'x': 0.30, 'top': .99}
+
 	GridLayout:
 		cols: 2
 		size_hint: (1, .12)
