set out GUI layouts for notification screen with necessary transitions.

--- a/application/src/kv/main.kv
+++ b/application/src/kv/main.kv
@@ -40,7 +40,14 @@
             text: 'Share My Items'
             font_size: 65
             on_press: root.manager.current = 'shareitems'
-            
+        
+        
+        Button:
+            text: 'Notifications'
+            font_size: 65
+            on_press: root.manager.current = 'notification'
+        
+                        
         Button:
         	text: 'Provide Feedback'
         	font_size: 65
