--- a/application/src/kv/recipes.kv
+++ b/application/src/kv/recipes.kv
@@ -185,11 +185,22 @@
 		size_hint: (0.58, 0.07)
 		pos_hint:{'x': 0.27, 'top': .99}
 
-    Label:
-        text: "Ingredients"
-        font_size: 55
+    GridLayout:
+        cols:2
         size_hint:(0.98,0.07)
         pos_hint:{'x': 0.01, 'top': 0.92}
+
+        Label:
+            text: "Ingredients"
+            font_size: 55
+            size_hint:(0.48,0.07)
+            pos_hint:{'x': 0.01, 'top': 0.92}
+        Button:
+            text: "Add Missing Items to SL"
+            font_size:40
+            size_hint: (.48, 0.09)
+            pos_hint:{'x': .01, 'top': .92}
+            on_press: root.addRecipeIngredientsToShoppingList()
 
     ScrollView:
         do_scroll_x: False
@@ -304,6 +315,7 @@
             size_hint_y: None
             height: self.minimum_height
             row_default_height: 175
+
     Button:
         text: "Add Recipe"
         font_size:65
@@ -321,11 +333,22 @@
 		size_hint: (0.58, 0.07)
 		pos_hint:{'x': 0.27, 'top': .99}
 
-    Label:
-        text: "Ingredients"
-        font_size: 55
+    GridLayout:
+        cols:2
         size_hint:(0.98,0.07)
         pos_hint:{'x': 0.01, 'top': 0.92}
+
+        Label:
+            text: "Ingredients"
+            font_size: 55
+            size_hint:(0.48,0.07)
+            pos_hint:{'x': 0.01, 'top': 0.92}
+        Button:
+            text: "Add Missing Items to SL"
+            font_size:40
+            size_hint: (.48, 0.09)
+            pos_hint:{'x': .01, 'top': .92}
+            on_press: root.addRecipeIngredientsToShoppingList()
         
     ScrollView:
         do_scroll_x: False
@@ -344,13 +367,13 @@
         text: "Instructions"
         font_size: 55
         size_hint:(0.98,0.07)
-        pos_hint:{'x': 0.01, 'top': 0.6}
+        pos_hint:{'x': 0.01, 'top': 0.57}
 
     ScrollView:
         do_scroll_x: False
         do_scroll_y: True
         pos_hint:{'x': 0.01, 'top': 0.51}
-        size_hint: (.98,.45)
+        size_hint: (.98,.35)
 
         GridLayout:
             cols:1
@@ -360,7 +383,7 @@
 
     GridLayout:
         cols:2
-        pos_hint:{'x': 0.01, 'top': .53}
+        pos_hint:{'x': 0.01, 'top': .63}
         Label:
             text:"Servings:"
             font_size: 55
@@ -380,9 +403,11 @@
 			source:"graphics/back.png"
 			center_x: self.parent.center_x
 			center_y: self.parent.center_y
+    
     Button:
         text: 'Delete'
         font_size: 65
         size_hint: (.98, 0.09)
         pos_hint:{'x': .01, 'top': .105}
         on_press: root.deleteRecipe()
+
