Modified screen transitions and previous screen transition - Modified many screen transitions to make it consistent across the board. Any button going 'back' will transition to the right, whereas any button going 'to' something will transition to the left. - Pressing the Expired Items button on the notifications page, then pressing the back button on the subsequent page will now correctly return to the notifications page.

--- a/application/src/kv/feedback.kv
+++ b/application/src/kv/feedback.kv
@@ -71,7 +71,7 @@
 			write_tab: True
 			
 		Button:
-			text: "Submit Your Feeback"
+			text: "Submit Your Feedback"
 			font_size: 50
 			on_press: 
 				root.submitFeedback()
@@ -96,5 +96,5 @@
 				root.ids.three.state = 'normal'
 				root.ids.four.state = 'normal'
 				root.ids.five.state = 'normal'
-				#root.manager.transition.direction = 'right' 
+				root.manager.transition.direction = 'right'
 				root.manager.current = 'homescreen'	
