--- a/application/src/kv/itemshare.kv
+++ b/application/src/kv/itemshare.kv
@@ -11,8 +11,9 @@
         text: " "
         size_hint: (0.2, 0.07)
         pos_hint:{'x': 0.01, 'top': .99}
-        on_press: root.manager.current =  'homescreen'
-        on_press: root.ids.shareFoodItems.clear_widgets()
+        on_press:
+            root.backButton()
+            root.manager.transition.direction = 'right'
         Image:
             source:"graphics/back.png"
             center_x: self.parent.center_x
@@ -40,7 +41,7 @@
 #	GridLayout:
 #		cols:1
 #		size_hint: (.98, 0.8)
-#        pos_hint:{'top': .85}
+#       pos_hint:{'top': .85}
 #		halign: 'left'
 #
 #        GridLayout:
