--- a/application/src/kv/notification.kv
+++ b/application/src/kv/notification.kv
@@ -19,7 +19,9 @@
 	    color: 1,0,0,1
 	    size_hint: (0.2, 0.05)
 	    pos_hint:{'x': 0.01, 'top': .99}
-	    on_press: root.manager.current = 'homescreen'
+	    on_press:
+	        root.manager.current = 'homescreen'
+	        root.manager.transition.direction = 'right'
 	    Image:
 		    source:"graphics/back.png"
 		    center_x: self.parent.center_x
