--- a/application/src/kv/recipes.kv
+++ b/application/src/kv/recipes.kv
@@ -8,8 +8,10 @@
 		color: 1,0,0,1
 		size_hint: (0.2, 0.05)
 		pos_hint:{'x': 0.01, 'top': .99}
-		on_press: root.manager.current =  'personalrecipe'
-		on_press: root.clearFieldsAdd()
+		on_press:
+		    root.manager.current =  'personalrecipe'
+		    root.clearFieldsAdd()
+		    root.manager.transition.direction = 'right'
 		Image:
 			source:"graphics/back.png"
 			center_x: self.parent.center_x
@@ -140,7 +142,9 @@
 		font_size: 15
 		size_hint: (0.2, 0.07)
 		pos_hint:{'x': 0.01, 'top': .99}
-		on_press: root.manager.current =  'recipes'
+		on_press:
+		    root.manager.current =  'recipes'
+		    root.manager.transition.direction = 'right'
 		Image:
 			source:"graphics/back.png"
 			center_x: self.parent.center_x
@@ -174,7 +178,9 @@
 		font_size: 15
 		size_hint: (0.2, 0.07)
 		pos_hint:{'x': 0.01, 'top': .99}
-		on_press: root.manager.current =  'recipes'
+		on_press:
+		    root.manager.current =  'recipes'
+		    root.manager.transition.direction = 'right'
 		Image:
 			source:"graphics/back.png"
 			center_x: self.parent.center_x
@@ -292,7 +298,9 @@
 		color: 1,0,0,1
 		size_hint: (0.2, 0.05)
 		pos_hint:{'x': 0.01, 'top': .99}
-        on_press: root.manager.current = 'recipes'
+        on_press:
+            root.manager.current = 'recipes'
+            root.manager.transition.direction = 'right'
         Image:
 			source:"graphics/back.png"
 			center_x: self.parent.center_x
@@ -398,7 +406,9 @@
 		font_size: 65
 		size_hint: (0.2, 0.07)
 		pos_hint:{'x': 0.01, 'top': .99}
-		on_press: root.manager.current =  'personalrecipe'
+		on_press:
+		    root.manager.current =  'personalrecipe'
+		    root.manager.transition.direction = 'right'
 		Image:
 			source:"graphics/back.png"
 			center_x: self.parent.center_x
