--- a/application/src/kv/shoppinglist.kv
+++ b/application/src/kv/shoppinglist.kv
@@ -6,8 +6,10 @@
 		text: " "
 		size_hint: (0.2, 0.07)
 		pos_hint:{'x': 0.01, 'top': .99}
-		on_press: root.manager.current =  'homescreen'
-		on_press: root.ids.search.text = ""
+		on_press:
+		    root.manager.current =  'homescreen'
+		    root.ids.search.text = ""
+		    root.manager.transition.direction = 'right'
 		Image:
 			source:"graphics/back.png"
 			center_x: self.parent.center_x
