Removed unnecessary variable and fixed a screen transition

--- a/application/src/kv/recipes.kv
+++ b/application/src/kv/recipes.kv
@@ -285,7 +285,9 @@
         Button:
             text: "Back To Home Screen"
             font_size: 65
-            on_press: root.manager.current = 'homescreen'
+            on_press:
+                root.manager.current = 'homescreen'
+                root.manager.transition.direction = 'right'
             
 <PersonalRecipe>:
     FloatLayout:
