Fixed bug that caused 'add location' button to crash app

--- a/application/src/kv/userprofile.kv
+++ b/application/src/kv/userprofile.kv
@@ -97,7 +97,7 @@
             Button:
                 text: 'Add Location'
                 font_size: 57
-                on_press: self.addLocation()
+                on_press: root.addLocation()
 
             Label:
                 text: 'Storage Locations'
