--- a/application/src/kv/shoppinglist.kv
+++ b/application/src/kv/shoppinglist.kv
@@ -26,7 +26,7 @@
 		text: " "
 		size_hint: (0.2, 0.07)
 		pos_hint:{'x': .79, 'top': .99}
-		on_press: root.SearchItem()
+		on_press: root.searchShoppingListForItem()
 		Image:
 			source:"graphics/search.png"
 			center_x: self.parent.center_x
