--- a/application/src/kv/userprofile.kv
+++ b/application/src/kv/userprofile.kv
@@ -9,7 +9,7 @@
 		spacing: [5, 5]
 		
 		Button:
-            text: 'Manage Perfect Larder'
+            text: 'Perfect Larder'
             font_size: 65
             on_press: root.manager.current = 'managepl'
             
@@ -304,9 +304,54 @@
 #		on_press: root.deleteUser()
 
 <ManagePL>:                                                            
-	BoxLayout:
-        orientation: 'vertical'
+	#BoxLayout:
+    #    orientation: 'vertical'
+	#	
+	#	Button:
+    #        text: 'Back'
+    #        on_press: root.manager.current = 'profile'
+    FloatLayout:
+        Image:
+            source: "graphics/generalbackground.png"
+	Button:
+		text: " "
+		size_hint: (0.2, 0.07)
+		pos_hint:{'x': 0.01, 'top': .99}
+		on_press:
+		    root.manager.current = 'profile'
+		    root.ids.search.text = ""
+		    root.manager.transition.direction = 'right'
+		Image:
+			source:"graphics/back.png"
+			center_x: self.parent.center_x
+			center_y: self.parent.center_y
 		
-		Button:
-            text: 'Back'
-            on_press: root.manager.current = 'profile'
+	TextInput:
+		id: search
+		size_hint: (0.58, 0.07)
+		halign: 'center'
+		font_size: 75
+		pos_hint:{'x': 0.21, 'top': .99}
+	
+	Button:
+		text: " "
+		size_hint: (0.2, 0.07)
+		pos_hint:{'x': .79, 'top': .99}
+	#	on_press: root.searchShoppingListForItem()
+		Image:
+			source:"graphics/search.png"
+			center_x: self.parent.center_x
+			center_y: self.parent.center_y
+
+	ScrollView:
+		do_scroll_x: False
+		do_scroll_y: True
+		size_hint: (.98,.815)
+		pos_hint:{'x': 0.01, 'top': 0.92}
+
+		GridLayout:
+			id: perfectlarder
+			cols: 1
+			size_hint_y: None
+            height: self.minimum_height
+            row_default_height: 175
