minor bug fixes

--- a/application/src/kv/main.kv
+++ b/application/src/kv/main.kv
@@ -72,4 +72,4 @@
             text: 'Logout'
             font_size: 65
             on_press: 
-            	root.manager.current = 'userlogin'
+            	root.logout()
