small last minute fixes

--- a/application/src/kv/feedback.kv
+++ b/application/src/kv/feedback.kv
@@ -20,7 +20,7 @@
 			font_size: 50
 
 		ToggleButton:
-			text: '1'
+			text: '1(Worst)'
 			id: one
 			font_size: 50
 			group: 'rating'
@@ -48,7 +48,7 @@
 			on_press: root.current_value = 4
 			
 		ToggleButton:
-			text: '5'
+			text: '5(Best)'
 			id: five
 			font_size: 50
 			group: 'rating'
