--- a/application/src/kv/inventory.kv
+++ b/application/src/kv/inventory.kv
@@ -156,7 +156,7 @@
 			Spinner:
 				id: storageLocation
                 font_size: 65
-                values: ["Pantry", "Refrigerator", "Freezer", "Other"]
+                values: ["Dry", "Fridge", "Freezer", "Other"]
 	GridLayout:
 		cols:1
 		size_hint: (.98, 0.1)
